force-app/main/default/objects/SP_Category_Sales_Summary__c/SP_Category_Sales_Summary__c.object-meta.xml
<CustomObject>
    <label>SP  Category Sales Summary</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SP  Category Sales Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SP  Category Sales Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>