force-app/main/default/objects/SP_Category_Sales_Summary__c/fields/SP_Change_Biologics_Reg__c.field-meta.xml
<CustomField>
    <fullName>SP_Change_Biologics_Reg__c</fullName>
    <formula>( SP_YTD_Biologics_Reg__c - SP_PYTD_Biologics_Reg__c )/ SP_PYTD_Biologics_Reg__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SP  % Change Biologics/Reg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>