force-app/main/default/objects/SP_Category_Sales_Summary__c/fields/SP_Change_Cervical__c.field-meta.xml
<CustomField>
    <fullName>SP_Change_Cervical__c</fullName>
    <formula>( SP_YTD_Cervical__c - SP_PYTD_Cervical__c ) / SP_PYTD_Cervical__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SP  % Change Cervical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>