force-app/main/default/objects/SP_Category_Sales_Summary__c/fields/SP_Change_Lumbar__c.field-meta.xml
<CustomField>
    <fullName>SP_Change_Lumbar__c</fullName>
    <formula>(SP_YTD_Lumbar__c - SP_PYTD_Lumbar__c ) / SP_PYTD_Lumbar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SP  % Change Lumbar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>