force-app/main/default/objects/SP_Category_Sales_Summary__c/fields/SP_Change_MIS__c.field-meta.xml
<CustomField>
    <fullName>SP_Change_MIS__c</fullName>
    <formula>(SP_YTD_MIS__c - SP_PYTD_MIS__c ) / SP_PYTD_MIS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SP  % Change MIS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>