force-app/main/default/objects/SP_Category_Sales_Summary__c/fields/SP_FPY_Biologics_Reg__c.field-meta.xml
<CustomField>
    <fullName>SP_FPY_Biologics_Reg__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SP  $ FPY Biologics/Reg</label>
    <length>30</length>
    <type>Text</type>
</CustomField>