force-app/main/default/objects/SP_Category_Sales_Summary__c/fields/SP_PYTD_Lumbar__c.field-meta.xml
<CustomField>
    <fullName>SP_PYTD_Lumbar__c</fullName>
    <label>SP  $ PYTD Lumbar</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>