force-app/main/default/objects/SP_Category_Sales_Summary__c/fields/SP_YTD_Cervical__c.field-meta.xml
<CustomField>
    <fullName>SP_YTD_Cervical__c</fullName>
    <label>SP  $ YTD Cervical</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>